syntax = "proto3";

import "wrappers.proto";

option csharp_namespace = "Utis.Minex.WrokerIntegration";

service WorkerIntegration {
	rpc GetWorkerStream (EmptyMessage) returns (stream WorkerAction);
}

message EmptyMessage
{
}

message WorkerAction
{
	WorkerMessage worker = 1;
	Action actionType = 2;
}

message WorkerMessage
{
	string LastName = 1;
	string FirstName = 2;
	string MiddleName = 3;
	int64 Birthday = 4;
	Sex Sex = 5;
	bool HaveChildren = 6;
	google.protobuf.Int64Value Id = 7;
}

enum Sex {
	Default = 0;
	Male = 1;
	Female = 2;
}

enum Action {
	DefaultAction = 0;
	Create = 1;
	Update = 2;
	Delete = 3;
}